[package]
name = "lrpeg"
version = "0.4.1"
authors = ["Sean Young <sean@mess.org>"]
description = "Left recursive PEG parser generator"
repository = "https://github.com/seanyoung/lrpeg"
keywords = [ "parser", "generator", "peg", "left-recursive" ]
categories = ["parsing"]
edition = "2018"
readme = "../README.md"
license = "MIT"
workspace = ".."

[dependencies]
unicode-xid = "0.2"
regex = "1"
